--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,9 @@ body {
   padding: 0;
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  position: absolute;
+  -moz-transition: opacity 3s ease-in-out;
+  transition: opacity 3s ease-in-out;
 }
 
 /* Search Bar properties */
@@ -24,7 +27,7 @@ body {
   top: 10%;
   right: 30%;
   left: 30%;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 input#search-bar {
@@ -77,7 +80,7 @@ input#search-bar {
   left: 40%;
   right: 40%;
   background-color: white;
-  opacity: 0.7;
+  opacity: 0.8;
   padding: 10px;
 }
 .card-container {
@@ -99,6 +102,7 @@ input#search-bar {
   height: 90px;
   width: 90px;
   display: inline-block;
+
 }
 .card-body > div {
   font-size: 4.2em;
@@ -215,3 +219,52 @@ input#search-bar {
   right: 0px;
 }
 /* End C/F Toggle switch */
+
+/* Lading Modal */
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  display: none;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 }
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom {
+  from{ bottom:-100px; opacity:0 }
+  to{ bottom:0; opacity:1 }
+}
+/*  END of loading modal */
